--- a/PR55-2020 Danijel Jovanovic/PR55-2020 Danijel Jovanovic.csproj
+++ b/PR55-2020 Danijel Jovanovic/PR55-2020 Danijel Jovanovic.csproj
@@ -160,6 +160,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Korisnik.cs" />
+    <Compile Include="Models\Porudzbina.cs" />
+    <Compile Include="Models\Proizvod.cs" />
+    <Compile Include="Models\Recenzija.cs" />
+    <Compile Include="Models\Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -230,7 +235,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\bootstrap.min.js.map" />
