--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Models\Proizvod.cs" />
     <Compile Include="Models\Recenzija.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Storage\KorisniciStorage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\lgbg.jpg" />
