prepare for edit profile

--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -162,6 +162,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Images\rgbg.jpg" />
+    <Content Include="MojProfil.html" />
     <Content Include="Registracija.html" />
     <Content Include="Prijava.html" />
     <Content Include="Scripts\bootstrap.bundle.js" />
