--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Storage\KorisniciStorage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Brisanje.html" />
     <Content Include="Images\lgbg.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
