--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Brisanje.html" />
+    <Content Include="DodajProdavca.html" />
     <Content Include="Images\lgbg.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
