--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <Content Include="Brisanje.html" />
     <Content Include="DodajProdavca.html" />
+    <Content Include="DodajProizvod.html" />
     <Content Include="Images\lgbg.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -169,6 +170,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Images\mainpf.jpg" />
+    <Content Include="Images\productplc.jpg" />
     <Content Include="Images\pwd.jpg" />
     <Content Include="Images\rgbg.jpg" />
     <Content Include="Izmena.html" />
