--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Models\KorisnikRegistracija.cs" />
     <Compile Include="Models\Porudzbina.cs" />
     <Compile Include="Models\Proizvod.cs" />
+    <Compile Include="Models\ProizvodAddRequest.cs" />
     <Compile Include="Models\PromenaLozinke.cs" />
     <Compile Include="Models\Recenzija.cs" />
     <Compile Include="Models\Response.cs" />
