--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -152,6 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Brisanje.html" />
+    <Content Include="BrisanjeProizvoda.html" />
     <Content Include="DodajProdavca.html" />
     <Content Include="DodajProizvod.html" />
     <Content Include="Images\lgbg.jpg" />
@@ -179,6 +180,7 @@
     <Content Include="Images\rgbg.jpg" />
     <Content Include="Izmena.html" />
     <Content Include="IzmenaLozinke.html" />
+    <Content Include="IzmenaProizvoda.html" />
     <Content Include="ListaKorisnika.html" />
     <Content Include="MojiProizvodi.html" />
     <Content Include="MojProfil.html" />
