--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -182,6 +182,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Images\mainpf.jpg" />
+    <Content Include="Images\package.png" />
     <Content Include="Images\productplc.jpg" />
     <Content Include="Images\pwd.jpg" />
     <Content Include="Images\rgbg.jpg" />
@@ -190,6 +191,7 @@
     <Content Include="IzmenaProizvoda.html" />
     <Content Include="ListaKorisnika.html" />
     <Content Include="ListaProizvoda.html" />
+    <Content Include="MojePorudzbine.html" />
     <Content Include="MojiProizvodi.html" />
     <Content Include="MojProfil.html" />
     <Content Include="IzmenaProfila.html" />
