update auth methods

--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -129,28 +129,28 @@
     <Compile Include="Controllers\KorisniciController.cs" />
     <Compile Include="Controllers\PorudzbinaController.cs" />
     <Compile Include="Controllers\RecenzijeController.cs" />
-    <Compile Include="Models\FilterProductRequest.cs" />
-    <Compile Include="Models\OrderRequest.cs" />
-    <Compile Include="Models\ProizvodEditRequest.cs" />
+    <Compile Include="Models\Requests\FilterProductRequest.cs" />
+    <Compile Include="Models\Requests\OrderRequest.cs" />
+    <Compile Include="Models\Requests\ProizvodEditRequest.cs" />
     <Compile Include="Controllers\ProizvodiController.cs" />
     <Compile Include="Controllers\StorageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AuthKorisnik.cs" />
+    <Compile Include="Models\Auth\AuthKorisnik.cs" />
     <Compile Include="Models\Enums\Enums.cs" />
     <Compile Include="Models\BaseModels\Korisnik.cs" />
-    <Compile Include="Models\KorisnikIzmenaProfila.cs" />
-    <Compile Include="Models\KorisnikLogin.cs" />
-    <Compile Include="Models\KorisnikRegistracija.cs" />
+    <Compile Include="Models\Auth\KorisnikIzmenaProfila.cs" />
+    <Compile Include="Models\Auth\KorisnikLogin.cs" />
+    <Compile Include="Models\Auth\KorisnikRegistracija.cs" />
     <Compile Include="Models\BaseModels\Porudzbina.cs" />
     <Compile Include="Models\BaseModels\Proizvod.cs" />
-    <Compile Include="Models\ProizvodAddRequest.cs" />
-    <Compile Include="Models\PromenaLozinke.cs" />
+    <Compile Include="Models\Requests\ProizvodAddRequest.cs" />
+    <Compile Include="Models\Auth\PromenaLozinke.cs" />
     <Compile Include="Models\BaseModels\Recenzija.cs" />
-    <Compile Include="Models\Response.cs" />
-    <Compile Include="Models\SearchRequest.cs" />
-    <Compile Include="Models\SingleIdRequest.cs" />
+    <Compile Include="Models\Responses\Response.cs" />
+    <Compile Include="Models\Requests\SearchRequest.cs" />
+    <Compile Include="Models\Requests\SingleIdRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\KorisniciStorage.cs" />
     <Compile Include="Storage\PorudzbineStorage.cs" />
