update admin order managment

--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -190,6 +190,7 @@
     <Content Include="IzmenaLozinke.html" />
     <Content Include="IzmenaProizvoda.html" />
     <Content Include="ListaKorisnika.html" />
+    <Content Include="ListaPorudzbina.html" />
     <Content Include="ListaProizvoda.html" />
     <Content Include="MojePorudzbine.html" />
     <Content Include="MojiProizvodi.html" />
