--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -197,6 +197,7 @@
     <Content Include="MojProfil.html" />
     <Content Include="IzmenaProfila.html" />
     <Content Include="OmiljeniProizvodi.html" />
+    <Content Include="OtkaziPorudzbinu.html" />
     <Content Include="OznaciPrispece.html" />
     <Content Include="Proizvod.html" />
     <Content Include="Registracija.html" />
