prepare for review implementation

--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -148,6 +148,8 @@
     <Compile Include="Models\Requests\ProizvodAddRequest.cs" />
     <Compile Include="Models\Auth\PromenaLozinke.cs" />
     <Compile Include="Models\Base\Recenzija.cs" />
+    <Compile Include="Models\Requests\PorudzbinaShowRequest.cs" />
+    <Compile Include="Models\Responses\PorudzbinaReviewResponse.cs" />
     <Compile Include="Models\Responses\Response.cs" />
     <Compile Include="Models\Requests\SearchRequest.cs" />
     <Compile Include="Models\Requests\SingleIdRequest.cs" />
