--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -200,6 +200,7 @@
     <Content Include="MojiProizvodi.html" />
     <Content Include="MojProfil.html" />
     <Content Include="IzmenaProfila.html" />
+    <Content Include="ObrisiRecenziju.html" />
     <Content Include="OmiljeniProizvodi.html" />
     <Content Include="OstaviRecenziju.html" />
     <Content Include="OtkaziPorudzbinu.html" />
