add edit review functionality

--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -193,6 +193,7 @@
     <Content Include="Izmena.html" />
     <Content Include="IzmenaLozinke.html" />
     <Content Include="IzmenaProizvoda.html" />
+    <Content Include="IzmeniRecenziju.html" />
     <Content Include="ListaKorisnika.html" />
     <Content Include="ListaPorudzbina.html" />
     <Content Include="ListaProizvoda.html" />
