--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -202,9 +202,11 @@
     <Content Include="MojProfil.html" />
     <Content Include="IzmenaProfila.html" />
     <Content Include="ObrisiRecenziju.html" />
+    <Content Include="OdobriRecenziju.html" />
     <Content Include="OmiljeniProizvodi.html" />
     <Content Include="OstaviRecenziju.html" />
     <Content Include="OtkaziPorudzbinu.html" />
+    <Content Include="OtkaziRecenziju.html" />
     <Content Include="OznaciPrispece.html" />
     <Content Include="Proizvod.html" />
     <Content Include="Registracija.html" />
