--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -203,6 +203,7 @@
     <Content Include="MojiProizvodi.html" />
     <Content Include="MojProfil.html" />
     <Content Include="IzmenaProfila.html" />
+    <Content Include="navbar.html" />
     <Content Include="ObrisiRecenziju.html" />
     <Content Include="OdobriRecenziju.html" />
     <Content Include="OmiljeniProizvodi.html" />
@@ -214,6 +215,8 @@
     <Content Include="Registracija.html" />
     <Content Include="Prijava.html" />
     <Content Include="Scripts\api\auth\auth-base.js" />
+    <Content Include="Scripts\api\auth\auth-edit-user.js" />
+    <Content Include="Scripts\api\users\edit-user.js" />
     <Content Include="Scripts\load-optimizer.js" />
     <Content Include="Scripts\api\products\all-products-fetcher.js" />
     <Content Include="Scripts\api\products\products-main.js" />
@@ -228,6 +231,7 @@
     <Content Include="Scripts\jquery-3.7.0.min.js" />
     <Content Include="Scripts\jquery-3.7.0.slim.js" />
     <Content Include="Scripts\jquery-3.7.0.slim.min.js" />
+    <Content Include="Scripts\loader-finisher.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -244,7 +248,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Scripts\api\orders\" />
     <Folder Include="Scripts\api\reviews\" />
-    <Folder Include="Scripts\api\users\" />
     <Folder Include="Uploads\" />
     <Folder Include="Views\AuthUser\" />
   </ItemGroup>
