--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -215,6 +215,7 @@
     <Content Include="Registracija.html" />
     <Content Include="Prijava.html" />
     <Content Include="Scripts\api\auth\auth-base.js" />
+    <Content Include="Scripts\api\auth\auth-edit-profile.js" />
     <Content Include="Scripts\api\auth\auth-edit-user.js" />
     <Content Include="Scripts\api\auth\auth-update-password.js" />
     <Content Include="Scripts\api\products\product-add.js" />
