edit product update

--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -220,6 +220,7 @@
     <Content Include="Scripts\api\auth\auth-update-password.js" />
     <Content Include="Scripts\api\products\product-add.js" />
     <Content Include="Scripts\api\products\product-delete.js" />
+    <Content Include="Scripts\api\products\product-edit.js" />
     <Content Include="Scripts\api\users\delete-user.js" />
     <Content Include="Scripts\api\users\edit-user.js" />
     <Content Include="Scripts\api\users\seller-add.js" />
