--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -225,6 +225,7 @@
     <Content Include="Scripts\api\users\delete-user.js" />
     <Content Include="Scripts\api\users\edit-user.js" />
     <Content Include="Scripts\api\users\seller-add.js" />
+    <Content Include="Scripts\api\users\users-all.js" />
     <Content Include="Scripts\load-optimizer.js" />
     <Content Include="Scripts\api\products\all-products-fetcher.js" />
     <Content Include="Scripts\api\products\products-main.js" />
