--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -203,7 +203,6 @@
     <Content Include="MojiProizvodi.html" />
     <Content Include="MojProfil.html" />
     <Content Include="IzmenaProfila.html" />
-    <Content Include="navbar.html" />
     <Content Include="ObrisiRecenziju.html" />
     <Content Include="OdobriRecenziju.html" />
     <Content Include="OmiljeniProizvodi.html" />
@@ -225,6 +224,8 @@
     <Content Include="Scripts\api\products\product-edit.js" />
     <Content Include="Scripts\api\products\product-fetcher-admin.js" />
     <Content Include="Scripts\api\products\products-favourite-by-user.js" />
+    <Content Include="Scripts\api\reviews\review-allow.js" />
+    <Content Include="Scripts\api\reviews\review-delete.js" />
     <Content Include="Scripts\api\reviews\review-edit.js" />
     <Content Include="Scripts\api\users\delete-user.js" />
     <Content Include="Scripts\api\users\edit-user.js" />
