--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -217,6 +217,7 @@
     <Content Include="Scripts\api\auth\auth-edit-profile.js" />
     <Content Include="Scripts\api\auth\auth-edit-user.js" />
     <Content Include="Scripts\api\auth\auth-update-password.js" />
+    <Content Include="Scripts\api\orders\order-confirmation.js" />
     <Content Include="Scripts\api\orders\orders-by-users.js" />
     <Content Include="Scripts\api\orders\orders-cancellation.js" />
     <Content Include="Scripts\api\orders\orders-fetcher.js" />
@@ -229,6 +230,7 @@
     <Content Include="Scripts\api\reviews\review-add.js" />
     <Content Include="Scripts\api\reviews\review-allow.js" />
     <Content Include="Scripts\api\reviews\review-delete.js" />
+    <Content Include="Scripts\api\reviews\review-disallow.js" />
     <Content Include="Scripts\api\reviews\review-edit.js" />
     <Content Include="Scripts\api\users\delete-user.js" />
     <Content Include="Scripts\api\users\edit-user.js" />
