--- a/Online Shop/Online Shop.csproj
+++ b/Online Shop/Online Shop.csproj
@@ -191,6 +191,7 @@
     <Content Include="Images\pastel-3.jpg" />
     <Content Include="Images\pastel-4.jpg" />
     <Content Include="Images\pastel-5.jpg" />
+    <Content Include="Images\pastel-pwd.jpg" />
     <Content Include="Images\productplc.jpg" />
     <Content Include="Izmena.html" />
     <Content Include="IzmenaLozinke.html" />
