--- a/Shopy/Web.config
+++ b/Shopy/Web.config
@@ -12,9 +12,14 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" maxRequestLength="1048576" executionTimeout="3600" />
   </system.web>
   <system.webServer>
+	  <security>
+		  <requestFiltering>
+			  <requestLimits maxAllowedContentLength="1073741824" />
+		  </requestFiltering>
+	  </security>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
